--- a/teste.html
+++ b/teste.html
@@ -16,45 +16,43 @@
     }
     .desenho {
         border: 1px solid red;
-        transform: rotate(-45deg);
     }
+
 </style>
 
 <div>
     <svg class="desenho" width="200" height="200" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-
-        <polyline points="
-            30,30 70,50
-            30,70 30,30
-        "
-        stroke="#000000"
-        fill="none"
-        stroke-width="2"
-        stroke-linecap="round"
-        stroke-linejoin="round" />
-
-        <polyline
+        <!-- <path d="M 100 0 A 100 100 0 0 1 200 100 L 100 0 Z" fill="blue"/> -->
+        
+        <polyline 
         points="
-            30,50 70,50
+        0,50 100,50
         "
-        stroke="#000000"
+        stroke="red"
+        stroke-width="1"
         fill="none"
-        stroke-width="2"
-        stroke-linecap="round"
-        stroke-linejoin="rount"
+        />
+        <polyline 
+        points="
+        50,0 50,100
+        "
+        stroke="red"
+        stroke-width="1"
+        fill="none"
         />
 
-        <polyline
+        <polyline 
         points="
-            30,40 20,50
-            30,60 30,40
-
+        50,75 50,10
+        75,75 25,75
+        50,10
         "
-        stroke="#000000"
-        fill="none"
+        stroke="black"
         stroke-width="2"
         stroke-linecap="round"
-        stroke-linejoin="rount"
+        stroke-linejoin="round"
+        fill="none"
         />
+        
     </svg>
 </div>
